CREATE TABLE USERS (
	ID UUID PRIMARY KEY DEFAULT GEN_RANDOM_UUID(),
	NAME VARCHAR(100) NOT NULL,
	WALLET_BALANCE DECIMAL(10, 2) NOT NULL DEFAULT 0.00,
	CONSTRAINT CHK_USERS_WALLET_BALANCE CHECK (WALLET_BALANCE >= 0.00)
);

CREATE TABLE RESTAURANTS (
	ID UUID PRIMARY KEY DEFAULT GEN_RANDOM_UUID(),
	NAME VARCHAR(150) NOT NULL,
	LATITUDE DOUBLE PRECISION NOT NULL,
	LONGITUDE DOUBLE PRECISION NOT NULL
);

CREATE TABLE ORDERS (
	ID UUID PRIMARY KEY DEFAULT GEN_RANDOM_UUID(),
	USER_ID UUID NOT NULL,
	RESTAURANT_ID UUID NOT NULL,
	TOTAL_AMOUNT DECIMAL(10, 2) NOT NULL,
	STATUS VARCHAR(20) NOT NULL,
	CREATED_AT TIMESTAMPTZ NOT NULL DEFAULT NOW(),
	CONSTRAINT FK_ORDERS_USER FOREIGN KEY (USER_ID) REFERENCES USERS (ID),
	CONSTRAINT FK_ORDERS_RESTAURANT FOREIGN KEY (RESTAURANT_ID) REFERENCES RESTAURANTS (ID),
	CONSTRAINT CHK_ORDERS_TOTAL_AMOUNT CHECK (TOTAL_AMOUNT >= 0.00),
	CONSTRAINT CHK_ORDERS_STATUS CHECK (
		STATUS IN ('PREPARING', 'DELIVERING', 'DELIVERED')
	)
);

CREATE TABLE WALLET_AUDIT_LOGS (
	ID UUID PRIMARY KEY DEFAULT GEN_RANDOM_UUID(),
	USER_ID UUID NOT NULL,
	AMOUNT_CHANGED DECIMAL(10, 2) NOT NULL,
	ACTION_TYPE VARCHAR(10) NOT NULL,
	BALANCE_AFTER DECIMAL(10, 2) NOT NULL,
	CREATED_AT TIMESTAMPTZ NOT NULL DEFAULT NOW(),
	CONSTRAINT FK_WALLET_AUDIT_USER FOREIGN KEY (USER_ID) REFERENCES USERS (ID),
	CONSTRAINT CHK_WALLET_AUDIT_ACTION CHECK (ACTION_TYPE IN ('DEBIT', 'CREDIT')),
	CONSTRAINT CHK_WALLET_AUDIT_BALANCE CHECK (BALANCE_AFTER >= 0.00)
);
