erDiagram
  USERS ||--o{ ORDERS : places
  USERS ||--o{ WALLET_AUDIT_LOGS : "logged for"
  RESTAURANTS ||--o{ ORDERS : receives

  USERS {
    uuid id PK
    varchar name
    decimal wallet_balance
  }
  RESTAURANTS {
    uuid id PK
    varchar name
    double latitude
    double longitude
  }
  ORDERS {
    uuid id PK
    uuid user_id FK
    uuid restaurant_id FK
    decimal total_amount
    varchar status
    timestamptz created_at
  }
  WALLET_AUDIT_LOGS {
    uuid id PK
    uuid user_id FK
    decimal amount_changed
    varchar action_type
    decimal balance_after
    timestamptz created_at
  }
